syntax = "proto3";

package queuepb;

option go_package = "./gen/queue";

import "google/protobuf/timestamp.proto";

service QueueService {
    rpc CreateQueue(CreateQueueRequest) returns (Queue);
    rpc GetQueueById(GetQueueByIdRequest) returns (Queue);
    rpc GetQueueItemByUserId(GetQueueItemByUserIdRequest) returns (InsertCandidateToQueueResponse);
    rpc InsertCandidateToQueue(InsertCandidateToQueueRequest) returns (InsertCandidateToQueueResponse);
}

message Queue {
    string Id = 1;
    int64 eventId = 2;
    repeated QueueItem queueItems = 3;
}

message QueueItem {
    string id = 1;
    int64 userId = 2;
    int32 position = 3;
    bool isCurrent = 4; 
    google.protobuf.Timestamp enteredAt = 5;  
}

message InsertCandidateToQueueResponse {
    int32 position = 1;
    google.protobuf.Timestamp waitingTime = 2;  
}

message CreateQueueRequest {
    int64 eventId = 1;
}

message GetQueueByIdRequest {
    string id = 1;
}

message GetQueueItemByUserIdRequest {
    string id = 1;
    int64 userId = 2;
}

message InsertCandidateToQueueRequest {
    string id = 1;
    int64 userId = 2;
}

message EmptyRequest {}
